--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
         path: .
         fetch-depth: 0
     
-    - run: npm start
-      shell: powershell
+    - name: ls
+      run: ls -R
+
+#     - run: npm start
+#       shell: powershell
 
